SXCSP-426: Refactoring of IL application properties to avoid conflict with env vars

--- a/csp-apps/integration-layer/il-integration-tests/src/test/resources/application-dangerduck.properties
+++ b/csp-apps/integration-layer/il-integration-tests/src/test/resources/application-dangerduck.properties
@@ -12,10 +12,7 @@ external.use.ssl= false
 external.ssl.keystore.resource= sslcert/csp-internal.jks
 external.ssl.keystore.passphrase= 123456
 
-misp.protocol= http
-misp.host= csp2.dangerduck.gr
-misp.port= 8082
-misp.path= /adapter/misp
+
 
 tc.protocol= http
 tc.host= tc.csp2.dangerduck.gr
@@ -28,17 +25,22 @@ elastic.host= csp2.dangerduck.gr
 elastic.port= 9200
 elastic.path= /cspdata
 
-viper.protocol= http
-viper.host= csp2.dangerduck.gr
-viper.port= 8082
-viper.path= /adapter/viper
+app.misp.protocol= http
+app.misp.host= csp2.dangerduck.gr
+app.misp.port= 8082
+app.misp.path= /adapter/misp
 
-trustcircle.protocol= http
-trustcircle.host= csp2.dangerduck.gr
-trustcircle.port= 8082
-trustcircle.path= /adapter/tc
+app.viper.protocol= http
+app.viper.host= csp2.dangerduck.gr
+app.viper.port= 8082
+app.viper.path= /adapter/viper
 
-taranis.protocol= http
-taranis.host= csp2.dangerduck.gr
-taranis.port= 8082
-taranis.path= /adapter/taranis
+app.trustcircle.protocol= http
+app.trustcircle.host= csp2.dangerduck.gr
+app.trustcircle.port= 8082
+app.trustcircle.path= /adapter/tc
+
+app.taranis.protocol= http
+app.taranis.host= csp2.dangerduck.gr
+app.taranis.port= 8082
+app.taranis.path= /adapter/taranis
