--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -39,17 +39,7 @@ external.ssl.endpoint.protocol = https4-ex
 external.ssl.keystore.resource = /opt/ssl/server/csp-external.jks
 external.ssl.keystore.passphrase = <tbd>
 
-# ----------------------------------------
-# ANONYMIZATION client properties
-# ----------------------------------------
 
-anon.client.ssl.enabled = true
-anon.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
-anon.client.ssl.jks.keystore.password = 123456
-
-anon.server.protocol = https
-anon.server.host = csp-anon
-anon.server.port:443
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
@@ -87,15 +77,21 @@ external.artefact.apps = <tbd>
 external.trustcircle.apps = <tbd>
 
 # ----------------------------------------
-# CSP APPLICATIONs Properties
+# CSP Services
 # ----------------------------------------
+
+# ANONYMIZATION properties
+anon.client.ssl.enabled = true
+anon.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+anon.client.ssl.jks.keystore.password = 123456
+anon.server.protocol = https
+anon.server.host = csp-anon
+anon.server.port:443
 
 elastic.protocol = https4-in
 elastic.host = <tbd>
 elastic.port = 443
 elastic.path = /cspdata
-
-#anonymization app
 
 tc.protocol = https4-in
 tc.host = <tbd>
@@ -103,40 +99,44 @@ tc.port = 443
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 
-trustcircle.protocol = https4-in
-trustcircle.host = <tbd>
-trustcircle.port = 443
-trustcircle.path = /adapter/tc
+# ----------------------------------------
+# CSP APP MODULE Properties
+# ----------------------------------------
 
-jitsi.protocol = https4-in
-jitsi.host = <tbd>
-jitsi.port = 443
-jitsi.path = /adapter/jitsi
+app.trustcircle.protocol = https4-in
+app.trustcircle.host = <tbd>
+app.trustcircle.port = 443
+app.trustcircle.path = /adapter/tc
 
-viper.protocol = https4-in
-viper.host = <tbd>
-viper.port = 443
-viper.path = /adapter/viper
+app.jitsi.protocol = https4-in
+app.jitsi.host = <tbd>
+app.jitsi.port = 443
+app.jitsi.path = /adapter/jitsi
 
-misp.protocol = https4-in
-misp.host = <tbd>
-misp.port = 443
-misp.path = /adapter/misp
+app.viper.protocol = https4-in
+app.viper.host = <tbd>
+app.viper.port = 443
+app.viper.path = /adapter/viper
 
-taranis.protocol = https4-in
-taranis.host = <tbd>
-taranis.port = 443
-taranis.path =/adapter/taranis
+app.misp.protocol = https4-in
+app.misp.host = <tbd>
+app.misp.port = 443
+app.misp.path = /adapter/misp
 
-intelmq.protocol = https4-in
-intelmq.host = <tbd>
-intelmq.port = 443
-intelmq.path = /adapter/intelmq
+app.taranis.protocol = https4-in
+app.taranis.host = <tbd>
+app.taranis.port = 443
+app.taranis.path =/adapter/taranis
 
-rt.protocol = https4-in
-rt.host = <tbd>
-rt.port = 443
-rt.path = /adapter/rt
+app.intelmq.protocol = https4-in
+app.intelmq.host = <tbd>
+app.intelmq.port = 443
+app.intelmq.path = /adapter/intelmq
+
+app.rt.protocol = https4-in
+app.rt.host = <tbd>
+app.rt.port = 443
+app.rt.path = /adapter/rt
 
 
 # Devel
