--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -16,14 +16,6 @@ external.ssl.keystore.passphrase = ${IL_SSL_KEYSTORE_PASS}
 #obsolete for production - use activemq broker
 embedded.activemq.data.path = /opt/data/activemq
 
-
-# ----------------------------------------
-# ANONYMIZATION client properties
-# ----------------------------------------
-
-anon.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
-anon.server.host = ${ANON_LOCAL_DOMAIN}
-
 # ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
@@ -46,52 +38,54 @@ external.trustcircle.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
 # CSP Services
 # ----------------------------------------
 
+# ANONYMIZATION properties
+anon.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+anon.server.host = ${ANON_LOCAL_DOMAIN}
+
 elastic.host = ${ES_LOCAL_DOMAIN}
 elastic.path = ${ES_PATH_BASE}
 elastic.protocol = https4-in
 elastic.port = ${ES_PORT}
-
-#anonymization app - TODO
 
 tc.host = ${TC_LOCAL_DOMAIN}
 tc.path.circles = ${TC_PATH_CIRCLES}
 tc.path.teams = ${TC_PATH_TEAMS}
 
 # ----------------------------------------
-# CSP APPs Properties
+# CSP APP MODULE Properties
 # ----------------------------------------
 
-trustcircle.protocol = ${TC_PROTOCOL}
-trustcircle.port = ${TC_PORT}
-trustcircle.host = ${TC_LOCAL_DOMAIN}
-trustcircle.path = ${TC_PATH}
+app.trustcircle.protocol = ${TC_PROTOCOL}
+app.trustcircle.port = ${TC_PORT}
+app.trustcircle.host = ${TC_LOCAL_DOMAIN}
+app.trustcircle.path = ${TC_PATH}
 
-jitsi.protocol = ${JITSI_PROTOCOL}
-jitsi.port = ${JITSI_PORT}
-jitsi.host = ${JITSI_LOCAL_DOMAIN}
-jitsi.path = ${JITSI_PATH}
+app.jitsi.protocol = ${JITSI_PROTOCOL}
+app.jitsi.port = ${JITSI_PORT}
+app.jitsi.host = ${JITSI_LOCAL_DOMAIN}
+app.jitsi.path = ${JITSI_PATH}
 
-viper.protocol = ${VIPER_PROTOCOL}
-viper.port = ${VIPER_PORT}
-viper.host = ${VIPER_LOCAL_DOMAIN}
-viper.path = ${VIPER_PATH}
+app.viper.protocol = ${VIPER_PROTOCOL}
+app.viper.port = ${VIPER_PORT}
+app.viper.host = ${VIPER_LOCAL_DOMAIN}
+app.viper.path = ${VIPER_PATH}
 
-misp.protocol = ${MISP_ADAPTER_PROTOCOL}
-misp.port = ${MISP_ADAPTER_PORT}
-misp.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
-misp.path = ${MISP_ADAPTER_PATH}
+app.misp.protocol = ${MISP_ADAPTER_PROTOCOL}
+app.misp.port = ${MISP_ADAPTER_PORT}
+app.misp.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
+app.misp.path = ${MISP_ADAPTER_PATH}
 
-taranis.protocol = ${TARANIS_PROTOCOL}
-taranis.port = ${TARANIS_PORT}
-taranis.host = ${TARANIS_LOCAL_DOMAIN}
-taranis.path = ${TARANIS_PATH}
+app.taranis.protocol = ${TARANIS_PROTOCOL}
+app.taranis.port = ${TARANIS_PORT}
+app.taranis.host = ${TARANIS_LOCAL_DOMAIN}
+app.taranis.path = ${TARANIS_PATH}
 
-intelmq.protocol = ${INTELMQ_PROTOCOL}
-intelmq.port = ${INTELMQ_PORT}
-intelmq.host = ${INTELMQ_LOCAL_DOMAIN}
-intelmq.path = ${INTELMQ_PATH}
+app.intelmq.protocol = ${INTELMQ_PROTOCOL}
+app.intelmq.port = ${INTELMQ_PORT}
+app.intelmq.host = ${INTELMQ_LOCAL_DOMAIN}
+app.intelmq.path = ${INTELMQ_PATH}
 
-rt.protocol = ${RT_ADAPTER_PROTOCOL}
-rt.port = ${RT_ADAPTER_PORT}
-rt.host = ${RT_ADAPTER_LOCAL_DOMAIN}
-rt.path = ${RT_ADAPTER_PATH}
+app.rt.protocol = ${RT_ADAPTER_PROTOCOL}
+app.rt.port = ${RT_ADAPTER_PORT}
+app.rt.host = ${RT_ADAPTER_LOCAL_DOMAIN}
+app.rt.path = ${RT_ADAPTER_PATH}
