--- a/csp-apps/integration-layer/il-server/src/main/resources/application-demo.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-demo.properties
@@ -86,40 +86,44 @@ tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 
-trustcircle.protocol = http
-trustcircle.host = localhost
-trustcircle.port = 8082
-trustcircle.path = /adapter/tc
+# ----------------------------------------
+# CSP APP MODULE Properties
+# ----------------------------------------
 
-jitsi.protocol = http
-jitsi.host = localhost
-jitsi.port = 8082
-jitsi.path = /adapter/jitsi
+app.trustcircle.protocol = http
+app.trustcircle.host = localhost
+app.trustcircle.port = 8082
+app.trustcircle.path = /adapter/tc
 
-viper.protocol = http
-viper.host = localhost
-viper.port = 8082
-viper.path = /adapter/viper
+app.jitsi.protocol = http
+app.jitsi.host = localhost
+app.jitsi.port = 8082
+app.jitsi.path = /adapter/jitsi
 
-misp.protocol = http
-misp.host = localhost
-misp.port = 8082
-misp.path = /adapter/misp
+app.viper.protocol = http
+app.viper.host = localhost
+app.viper.port = 8082
+app.viper.path = /adapter/viper
 
-taranis.protocol = http
-taranis.host = localhost
-taranis.port = 8082
-taranis.path = /adapter/taranis
+app.misp.protocol = http
+app.misp.host = localhost
+app.misp.port = 8082
+app.misp.path = /adapter/misp
 
-intelmq.protocol = http
-intelmq.host = localhost
-intelmq.port = 8082
-intelmq.path = /adapter/intelmq
+app.taranis.protocol = http
+app.taranis.host = localhost
+app.taranis.port = 8082
+app.taranis.path = /adapter/taranis
 
-rt.protocol = http
-rt.host = localhost
-rt.port = 8082
-rt.path = /adapter/rt
+app.intelmq.protocol = http
+app.intelmq.host = localhost
+app.intelmq.port = 8082
+app.intelmq.path = /adapter/intelmq
+
+app.rt.protocol = http
+app.rt.host = localhost
+app.rt.port = 8082
+app.rt.path = /adapter/rt
 
 
 # Devel
