--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -61,19 +61,6 @@ activemq.redelivery.delay= 1000
 activemq.max.redelivery.attempts = 5
 #activemq.max.connections = 10
 
-
-# ----------------------------------------
-# ANONYMIZATION client properties
-# ----------------------------------------
-
-anon.client.ssl.enabled = false
-anon.client.ssl.jks.keystore = classpath:cps-internal.jks
-anon.client.ssl.jks.keystore.password = 123456
-
-anon.server.protocol = http
-anon.server.host = localhost
-anon.server.port:8085
-
 # ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
@@ -95,13 +82,19 @@ external.artefact.apps = viper
 external.trustcircle.apps = trustcircle
 
 # ----------------------------------------
-# CSP APPLICATIONs Properties
+# CSP Services
 # ----------------------------------------
 
+# ANONYMIZATION properties
+anon.client.ssl.enabled = false
+anon.client.ssl.jks.keystore = classpath:cps-internal.jks
+anon.client.ssl.jks.keystore.password = 123456
+anon.server.protocol = http
+anon.server.host = localhost
+anon.server.port:8085
+
 elastic.protocol = https4-in
-#elastic.host = csp.dangerduck.gr
 elastic.host = csp2.dangerduck.gr
-#elastic.port = 9002
 elastic.port = 9200
 elastic.path = /cspdata
 
@@ -110,48 +103,50 @@ adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
-#anonymization app
-
 tc.protocol = https4-in
 tc.host = localhost
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 
-trustcircle.protocol = https4-in
-trustcircle.host = localhost
-trustcircle.port = 8082
-trustcircle.path = /adapter/tc
+# ----------------------------------------
+# CSP APP MODULE Properties
+# ----------------------------------------
 
-jitsi.protocol = https4-in
-jitsi.host = localhost
-jitsi.port = 8082
-jitsi.path = /adapter/jitsi
+app.trustcircle.protocol = https4-in
+app.trustcircle.host = localhost
+app.trustcircle.port = 8082
+app.trustcircle.path = /adapter/tc
 
-viper.protocol = https4-in
-viper.host = localhost
-viper.port = 8082
-viper.path = /adapter/viper
+app.jitsi.protocol = https4-in
+app.jitsi.host = localhost
+app.jitsi.port = 8082
+app.jitsi.path = /adapter/jitsi
 
-misp.protocol = https4-in
-misp.host = localhost
-misp.port = 8082
-misp.path = /adapter/misp
+app.viper.protocol = https4-in
+app.viper.host = localhost
+app.viper.port = 8082
+app.viper.path = /adapter/viper
 
-taranis.protocol = https4-in
-taranis.host = localhost
-taranis.port = 8082
-taranis.path = /adapter/taranis
+app.misp.protocol = https4-in
+app.misp.host = localhost
+app.misp.port = 8082
+app.misp.path = /adapter/misp
 
-intelmq.protocol = https4-in
-intelmq.host = localhost
-intelmq.port = 8082
-intelmq.path = /adapter/intelmq
+app.taranis.protocol = https4-in
+app.taranis.host = localhost
+app.taranis.port = 8082
+app.taranis.path = /adapter/taranis
 
-rt.protocol = https4-in
-rt.host = localhost
-rt.port = 8082
-rt.path = /adapter/rt
+app.intelmq.protocol = https4-in
+app.intelmq.host = localhost
+app.intelmq.port = 8082
+app.intelmq.path = /adapter/intelmq
+
+app.rt.protocol = https4-in
+app.rt.host = localhost
+app.rt.port = 8082
+app.rt.path = /adapter/rt
 
 
 # Devel
