--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -5,12 +5,12 @@ security.basic.enabled=false
 
 zeromq.protocol=tcp
 #zeromq.host=localhost
-zeromq.host=150.140.187.123
-zeromq.port=50000
+zeromq.host=localhost
+zeromq.port=50001
 zeromq.topic=misp_json
 
 misp.app.protocol = http
-misp.app.host = 150.140.187.123
+misp.app.host = localhost
 misp.app.port = 8182
 misp.app.authorization.key=RnCpy64iWasEqfwAHTMLy3s5fXxqq38VyXDFOez1
 
