--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -61,6 +61,8 @@ tc.protocol = https
 tc.host = localhost
 tc.port = 9000
 tc.path.circles = /tc
+tc.path.localcircles = /ltcs
+tc.path.localcircle = /ltc
 tc.path.teams = /tct
 tc.client.ssl.enabled=true
 tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
