Refactoring of MISP application properties to avoid conflict with tc env vars (eg tc.protocol was overridden by TC_PROTOCOL and so on)

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -41,16 +41,16 @@ adapter.server.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
 adapter.server.port = 443
 
 ## TC
-tc.protocol = https
-tc.host = ${TC_LOCAL_DOMAIN}
-tc.port = 443
-tc.path.circles = ${TC_PATH_CIRCLES}
-tc.path.teams = ${TC_PATH_TEAMS}
-tc.client.ssl.enabled=true
-tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
-tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+app.tc.protocol = https
+app.tc.host = ${TC_LOCAL_DOMAIN}
+app.tc.port = 443
+app.tc.path.circles = ${TC_PATH_CIRCLES}
+app.tc.path.teams = ${TC_PATH_TEAMS}
+app.tc.client.ssl.enabled=true
+app.tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+app.tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
-## ANON
+## ANON - Is MISP using ANON module? if not, delete the properties below
 anon.protocol = https
 anon.host = ${ANON_LOCAL_DOMAIN}
 anon.port=${ANON_PORT}
