--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -52,14 +52,14 @@ emitter.server.port = 3001
 
 # Using properties for a mocked TC nodejs server you can start under dummyserver project
 # You can override them to what ever is applicable - see docker profile for our docker env
-tc.protocol = https
-tc.host = localhost
-tc.port = 9000
-tc.path.circles = /tc
-tc.path.teams = /tct
-tc.client.ssl.enabled=true
-tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
-tc.client.ssl.jks.keystore.password = 123456
+app.tc.protocol = https
+app.tc.host = localhost
+app.tc.port = 9000
+app.tc.path.circles = /tc
+app.tc.path.teams = /tct
+app.tc.client.ssl.enabled=true
+app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
+app.tc.client.ssl.jks.keystore.password = 123456
 
 anon.protocol = http
 anon.host = localhost
