--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -14,10 +14,10 @@ misp.app.port = 8182
 misp.app.authorization.key=RnCpy64iWasEqfwAHTMLy3s5fXxqq38VyXDFOez1
 
 misp.ui.protocol = http
-#misp.ui.host = localhost
-misp.ui.host = misp.dimitris.dk
+misp.ui.host = localhost
+#misp.ui.host = misp.dimitris.dk
 #misp.ui.port = 443
-misp.ui.port = 80
+misp.ui.port = 8182
 
 misp.sync.enabled = false
 misp.sync.fixed.delay=60000
