SXCSP-437: Support the CONTACT dataType

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -26,6 +26,7 @@ internal.incident.apps = ${IL_IN_INCIDENT_APPS:rt, intelmq}
 internal.vulnerability.apps = ${IL_IN_VULNERABILITY_APPS:taranis, misp}
 internal.artefact.apps =${IL_IN_ARTEFACT_APPS: viper}
 internal.trustcircle.apps = ${IL_IN_TRUSTCIRCLE_APPS:trustcircle}
+internal.contact.apps = ${IL_IN_TRUSTCIRCLE_APPS:trustcircle}
 
 external.event.apps = ${IL_EX_EVENT_APPS:misp}
 external.threat.apps = ${IL_EX_THREAT_APPS:misp}
@@ -33,6 +34,7 @@ external.incident.apps = ${IL_EX_INCIDENT_APPS:rt}
 external.vulnerability.apps = ${IL_EX_VULNERABILITY_APPS:taranis}
 external.artefact.apps = ${IL_EX_ARTEFACT_APPS:viper}
 external.trustcircle.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
+external.contact.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
 
 # ----------------------------------------
 # CSP Services
