--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -73,6 +73,7 @@ internal.incident.apps = rt, intelmq
 internal.vulnerability.apps = taranis, misp
 internal.artefact.apps = viper
 internal.trustcircle.apps = trustcircle
+internal.contact.apps = trustcircle
 
 external.event.apps = misp
 external.threat.apps = misp
@@ -80,6 +81,7 @@ external.incident.apps = rt
 external.vulnerability.apps = taranis 
 external.artefact.apps = viper
 external.trustcircle.apps = trustcircle
+external.contact.apps = trustcircle
 
 # ----------------------------------------
 # CSP Services
