--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -68,6 +68,7 @@ internal.incident.apps = <tbd>
 internal.vulnerability.apps = <tbd>
 internal.artefact.apps = <tbd>
 internal.trustcircle.apps = <tbd>
+internal.contact.apps = <tbd>
 
 external.event.apps = <tbd>
 external.threat.apps = <tbd>
@@ -75,6 +76,7 @@ external.incident.apps = <tbd>
 external.vulnerability.apps = <tbd>
 external.artefact.apps = <tbd>
 external.trustcircle.apps = <tbd>
+external.contact.apps = <tbd>
 
 # ----------------------------------------
 # CSP Services
