--- a/csp-apps/integration-layer/il-server/src/main/resources/application-demo.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-demo.properties
@@ -54,6 +54,7 @@ internal.incident.apps = rt, intelmq
 internal.vulnerability.apps = taranis, misp
 internal.artefact.apps = misp, viper
 internal.trustcircle.apps = trustcircle
+internal.contact.apps = trustcircle
 
 external.event.apps = misp
 external.threat.apps = misp
@@ -61,6 +62,7 @@ external.incident.apps = intelmq
 external.vulnerability.apps = taranis 
 external.artefact.apps = viper
 external.trustcircle.apps = trustcircle
+external.contact.apps = trustcircle
 
 # ----------------------------------------
 # CSP APPLICATIONs Properties
