Comment out ltcs api calls since CMM is not ready yet

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -59,8 +59,8 @@ app.tc.host = localhost
 app.tc.port = 9000
 app.tc.path.circles = /tc
 app.tc.path.teams = /tct
-app.tc.path.localcircles = /ltcs
-app.tc.path.localcircle = /ltc
+app.tc.path.localcircles = /api/v1/ltcs
+app.tc.path.localcircle = /api/v1/ltc
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = 123456
