--- a/csp-apps/integration-layer/il-client/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-client/src/main/resources/application.properties
@@ -16,8 +16,8 @@ tc.host = localhost
 tc.port = 8081
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
-tc.path.localcircles = /v1/ltcs
-tc.path.localcircle = /v1/ltc
+tc.path.localcircles = /api/v1/ltcs
+tc.path.localcircle = /api/v1/ltc
 
 anon.protocol = http
 anon.host = localhost
