SXCSP-438: Adding getContactById() in TC Client plus a test

--- a/csp-apps/integration-layer/il-client/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-client/src/main/resources/application.properties
@@ -18,6 +18,7 @@ tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 tc.path.localcircles = /v1/ltcs
 tc.path.localcircle = /v1/ltc
+tc.path.contacts = /v1/contacts
 
 anon.protocol = http
 anon.host = localhost
