--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -42,7 +42,7 @@ conf.retry.maxAttempts = 3
 installation.temp.directory=/opt/csp/downloads
 # this should become /opt/csp/modules
 installation.modules.directory=/opt/csp/modules
-
+installation.vhost.directory=/opt/csp/apache2/csp-sites
 
 
 ## flyway (initialization for db logging
@@ -50,3 +50,5 @@ flyway.enabled=true
 flyway.check-location=true
 flyway.baseline-on-migrate=true
 flyway.locations[0]=classpath:db/migration
+
+
