--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -32,9 +32,14 @@ conf.client.ssl.enabled = false
 conf.client.ssl.jks.keystore = classpath:cps-internal.jks
 conf.client.ssl.jks.keystore.password = 123456
 
-conf.server.protocol = http
-conf.server.host = localhost
-conf.server.port = 8090
+#conf.server.protocol = http
+#conf.server.host = localhost
+#conf.server.port = 8090
+
+conf.server.host=config.central-csp.athens.intrasoft-intl.private
+conf.server.port=443
+conf.server.protocol=https
+
 
 conf.retry.backOffPeriod = 15000
 conf.retry.maxAttempts = 3
