SXCSP-309: Implementation to support new CMM and refactoring of integration tests to support the new business logic

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -98,6 +98,7 @@ tc.host = <tbd>
 tc.port = 443
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
+tc.path.localcircle = /api/v1/ltc
 
 # ----------------------------------------
 # CSP APP MODULE Properties
