--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -108,6 +108,7 @@ tc.host = localhost
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
+tc.path.localcircle = /api/v1/ltc
 
 # ----------------------------------------
 # CSP APP MODULE Properties
