fixes for sites

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 # default is create-drop :D
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 
 
