complete installation marker

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # CLIENT UI
-client.ui.jiralink=https://jira.intrasoft-intl.com/
+client.ui.jiralink=https://jira.intrasoft-intl.com/servicedesk/customer/portal/54
 client.ui.statusInterval=10000
 client.ui.refreshInterval=60000
 
