--- a/csp-apps/vcbridgeadm/docker/docker-compose.yml
+++ b/csp-apps/vcbridgeadm/docker/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-  jitsi:
-    build: .
-    container_name: jitsimeet
+  csp-jitsi:
+    image: csp-jitsi:1.0
+    container_name: csp-jitsi
     dns:
       - 8.8.8.8
     env_file:
