--- a/csp-apps/integration-layer/il-client/pom.xml
+++ b/csp-apps/integration-layer/il-client/pom.xml
@@ -36,9 +36,9 @@
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.intrasoft.csp</groupId>
-            <artifactId>il-server</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
         </dependency>
     </dependencies>
 
