--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -33,6 +33,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>misp-commons</artifactId>
 			<version>${project.version}</version>
@@ -64,6 +68,13 @@
             <artifactId>camel-jsonpath</artifactId>
             <version>2.19.2</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
