--- a/csp-apps/vcbridgeadm/application/pom.xml
+++ b/csp-apps/vcbridgeadm/application/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>com.intrasoft.csp</groupId>
         <artifactId>videobridge</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.4.0-SNAPSHOT</version>
 	<artifactId>vcbridge-admin-application</artifactId>
 	<packaging>jar</packaging>
 	<name>Videoconferencing Bridge : Admin Application</name>
@@ -71,7 +71,7 @@
 			<artifactId>postgresql</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>eu.europa.csp.vcbadmin</groupId>
+			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>vcbridge-admin-data-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
