SXCSP-438: Revert some changes introduced by previous commit resulting in inconsistent application properties in TC client config class

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -60,6 +60,7 @@ app.tc.port = 9000
 app.tc.path.circles = /tc
 app.tc.path.teams = /tct
 app.tc.path.localcircle = /api/v1/ltc
+app.tc.path.contacts = /api/v1/contacts
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = 123456
