--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -111,6 +111,7 @@ tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 tc.path.localcircle = /api/v1/ltc
+tc.path.contacts = /api/v1/contacts
 
 # ----------------------------------------
 # CSP APP MODULE Properties
