--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>misp-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
         <!--https://mvnrepository.com/artifact/org.apache.camel/camel-jsonpath-->
         <dependency>
             <groupId>org.apache.camel</groupId>
