--- a/csp-apps/integration-layer/il-integration-tests/pom.xml
+++ b/csp-apps/integration-layer/il-integration-tests/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>parent-pom</artifactId>
+        <artifactId>integration-layer</artifactId>
         <version>0.4.0-SNAPSHOT</version>
     </parent>
 
