Enable misp-org-groups syncing (by property) to be default behavior (syncing every 60sec)

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -21,7 +21,7 @@ misp.ui.port = 8182
 
 misp.sync.prefix = CSP::
 misp.sync.type = CspOrg
-misp.sync.enabled = false
+misp.sync.enabled = true
 misp.sync.fixed.delay=60000
 misp.sync.initial.delay=60000
 
