--- a/csp-apps/anonymization/anon-server/src/main/resources/application.properties
+++ b/csp-apps/anonymization/anon-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # SERVER
 server.port=8585
 h2.db.file = /opt/csp/anonymization/anon_db
+#h2.db.file = e:\\0\\anon_db
 
 #FLYWAY
 flyway.enabled=false
