--- a/csp-apps/configuration/conf-commons/pom.xml
+++ b/csp-apps/configuration/conf-commons/pom.xml
@@ -47,6 +47,11 @@
         </dependency>
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
+            <artifactId>libraries-headersauth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
             <artifactId>il-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
