MISP: handle proposals

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -11,7 +11,7 @@ zeromq.topic=misp_json
 misp.app.protocol = http
 misp.app.host = localhost
 misp.app.port = 8182
-misp.app.authorization.key=RnCpy64iWasEqfwAHTMLy3s5fXxqq38VyXDFOez1
+misp.app.authorization.key=0vslnvECERbpuWZkvZK04LMEALbB4eQmTyNl594H
 
 misp.ui.protocol = http
 misp.ui.host = localhost
@@ -84,3 +84,4 @@ apache.camel.use.activemq=false
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
 #logging.level.com.intrasoft.csp.misp.MispAdapterEmitterApplication=DEBUG
+logging.level.com.intrasoft.csp.misp=DEBUG
