SXCSP-260: Adding module skeleton for Regular Reports Service

--- a/csp-apps/pom.xml
+++ b/csp-apps/pom.xml
@@ -25,6 +25,7 @@
 		<module>vcbridge</module>
 		<module>misp</module>
 		<module>libraries</module>
+        <module>regular-reports</module>
     </modules>
 
 	<properties>
