SXCSP-260: Adding Regular Reports Service commons and models

--- a/csp-apps/regular-reports/pom.xml
+++ b/csp-apps/regular-reports/pom.xml
@@ -17,8 +17,9 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>es-client</module>
-        <module>emailer</module>
+        <module>regrep-es-client</module>
+        <module>regrep-emailer</module>
+        <module>regrep-commons</module>
     </modules>
 
     
