--- a/csp-apps/regular-reports/regrep-es-client/pom.xml
+++ b/csp-apps/regular-reports/regrep-es-client/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <!--<version>5.0.4.RELEASE</version>-->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <!--<version>2.9.4</version>-->
+        </dependency>
     </dependencies>
 
     
