--- a/csp-apps/regular-reports/regrep-es-client/pom.xml
+++ b/csp-apps/regular-reports/regrep-es-client/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>jackson-databind</artifactId>
             <!--<version>2.9.4</version>-->
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     
