--- a/csp-apps/regular-reports/pom.xml
+++ b/csp-apps/regular-reports/pom.xml
@@ -20,6 +20,7 @@
         <module>regrep-es-client</module>
         <module>regrep-emailer</module>
         <module>regrep-commons</module>
+        <module>regrep-app</module>
     </modules>
 
     
