some adjustments, separation of services etc.

--- a/deployment/docker/applications/intelmq/.env-old
+++ b/deployment/docker/applications/intelmq/.env-old
@@ -1,7 +1,12 @@
-CSP_NAME=tku
+#CSP_NAME=tku
 
-DOMAIN=tku.csp.com
-LOCAL_DOMAIN=local.tku.csp.com
+#DOMAIN=tku.csp.com
+#LOCAL_DOMAIN=local.tku.csp.com
+
+CSP_NAME=ff
+
+DOMAIN=ff.preprod.melicertes.eu
+LOCAL_DOMAIN=local.ff.preprod.melicertes.eu
 
 ## Postgres
 POSTGRES_PASSWORD=postgres
@@ -86,8 +91,8 @@ OAM_CSP_SUBDOMAIN_PREFIX=auth
 OAM_DOCR_PORT=8080
 OAM_PORT=443
 
-OAM_IN_AGENTS_DOMAINS=(RT IMQ)
-OAM_IN_AGENTS=(rt imq)
+OAM_IN_AGENTS_DOMAINS=(KIBANA TC FILES)
+OAM_IN_AGENTS=(search tc files)
 
 
 ################################
@@ -119,8 +124,8 @@ VIPER_DOCR_PORT=8000
 VIPER_PATH=/adapter/viper
 
 MISP_PROTOCOL=https4-in
-MISP_LOCAL_DOMAIN=misp.local.csp.tku.com
-MISP_DOMAIN=.csp.tku.com
+MISP_LOCAL_DOMAIN=misp.local.ff.preprod.melicertes.eu
+MISP_DOMAIN=.ff.preprod.melicertes.eu
 MISP_PORT=443
 MISP_DOCR_PORT=8000
 MISP_PATH=/adapter/misp
@@ -133,25 +138,24 @@ TARANIS_DOCR_PORT=8000
 TARANIS_PATH=/adapter/taranis
 
 INTELMQ_PROTOCOL=https4-in
-INTELMQ_LOCAL_DOMAIN=intelmq.local.tku.csp.com
-INTELMQ_DOMAIN=.tku.csp.com
+INTELMQ_LOCAL_DOMAIN=intelmq.local.ff.preprod.melicertes.eu
+INTELMQ_DOMAIN=.ff.preprod.melicertes.eu
 INTELMQ_PORT=443
 INTELMQ_DOCR_PORT=8000
 INTELMQ_PATH=/adapter/intelmq
 
+RT_PROTOCOL=https4-in
+RT_LOCAL_DOMAIN=rt.local.ff.preprod.melicertes.eu
+RT_DOMAIN=.ff.preprod.melicertes.eu
+RT_PORT=443
+RT_DOCR_PORT=8000
+RT_PATH=/adapter/rt
+
 INTELMQ_ADAPTER_PROTOCOL=https4-in
-INTELMQ_ADAPTER_LOCAL_DOMAIN=intelmq-adapter.local.tku.csp.com
-INTELMQ_ADAPTER_DOMAIN=.tku.csp.com
+INTELMQ_ADAPTER_LOCAL_DOMAIN=intelmq-adapter.local.demo1-csp.athens.intrasoft-intl.private
+INTELMQ_ADAPTER_DOMAIN=.demo1-csp.athens.intrasoft-intl.private
 INTELMQ_ADAPTER_PORT=443
 INTELMQ_ADAPTER_DOCR_HOST=csp-intelmq-adapter
 INTELMQ_ADAPTER_DOCR_PORT=8081
 INTELMQ_ADAPTER_PATH=/adapter/intelmq
-
-
-RT_PROTOCOL=https4-in
-RT_LOCAL_DOMAIN=rt.local.tku.csp.com
-RT_DOMAIN=.tku.csp.com
-RT_PORT=443
-RT_DOCR_PORT=8000
-RT_PATH=/adapter/rt
 
