--- a/deployment/docker/applications/intelmq/docker-compose.yml
+++ b/deployment/docker/applications/intelmq/docker-compose.yml
@@ -15,23 +15,24 @@ services:
     expose:
        - ${INTELMQ_DOCR_PORT}
 
-  
-  intelmq-emitter:
+  intelmq-adapter:
     depends_on:
        - intelmq
     image: csp-java8:1.0
-    container_name: csp-intelmq_emitter
+    container_name: csp-intelmq_adapter
     domainname: ${LOCAL_DOMAIN}
-    hostname: csp-intelmq_emitter
+    hostname: csp-imq-adapter
     env_file:
         - .env
-    command: java -Xmx512m -Dspring.profiles.active=docker -jar server.jar
+    command: java  -Xmx512m -Dspring.profiles.active=docker -Dcsp.client.ssl.jks.keystore.password=123456   -jar server.jar
     working_dir: /opt/csp
+    ports:
+        - ${INTELMQ_ADAPTER_DOCR_PORT}
     volumes:
         - ./intelmq-emitter-3.5.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
         - SSLDatavolume:/opt/ssl/
-    expose:
-        - ${INTELMQ_ADAPTER_DOCR_PORT}
+        - /opt/csp/logs/:/opt/csplogs
+
 volumes:
    SSLDatavolume:
         external: true
@@ -40,4 +41,3 @@ networks:
   default:
     external:
      name: ${LOCAL_DOMAIN}
-
