--- a/deployment/docker/applications/redis/manifest.json
+++ b/deployment/docker/applications/redis/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1",
-  "sh-first": "first-time.sh".
+  "format": 1.1,
+  "sh-first": "first-time.sh",
   "sh-last": "last-time.sh"
 }
