--- a/csp-apps/regular-reports/regrep-emailer/pom.xml
+++ b/csp-apps/regular-reports/regrep-emailer/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <!--<version>1.5.2.RELEASE</version>-->
         </dependency>
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
