--- a/csp-apps/regular-reports/regrep-es-client/pom.xml
+++ b/csp-apps/regular-reports/regrep-es-client/pom.xml
@@ -10,9 +10,9 @@
         <version>0.4.0-SNAPSHOT</version>
     </parent>
 
-    <name>es-client</name>
+    <name>regrep-es-client</name>
     <groupId>com.intrasoft.csp</groupId>
-    <artifactId>es-client</artifactId>
+    <artifactId>regrep-es-client</artifactId>
     <version>0.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
