SXCSP-260: Fixing Cron expressions and migrating from hard-coded strings to application.properties

--- a/csp-apps/regular-reports/regrep-emailer/src/test/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-emailer/src/test/resources/application.properties
@@ -12,6 +12,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # spring.thymeleaf settings
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+# spring.thymeleaf.content-type=text/html
 
 # thymeleaf template settings
 th.email.template=plain-text
