--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -1,6 +1,41 @@
-# Regular Reporting Basis
+# Regular Reporting Basis and Cron Expressions
 regrep.basis.daily=true
 regrep.basis.weekly=true
 regrep.basis.monthly=true
 regrep.basis.quarterly=false
 regrep.basis.yearly=true
+
+# Cron Expressions
+regrep.cron.daily=0 0 9 ? * MON-FRI
+regrep.cron.weekly=0 0 9 ? * MON
+regrep.cron.monthly=0 0 9 1 * ?
+regrep.cron.quarterly=0 0 9 1 1/3 ?
+regrep.cron.yearly=0 0 9 1 JAN ?
+
+# elasticsearch instance settings
+es.protocol=http
+es.host=docker.containers
+es.port=9200
+
+# spring.mail settings
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.username=<username>
+spring.mail.password=<password>
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# spring.thymeleaf settings
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+# thymeleaf template settings
+th.email.template=plain-text
+th.email.logo=logo.png
+th.email.recipient=Administrator
+th.email.subject=Subject sample
+th.email.message=Message content text sample
+th.email.signature=Regular Reports Service
