--- a/csp-apps/regular-reports/regrep-commons/pom.xml
+++ b/csp-apps/regular-reports/regrep-commons/pom.xml
@@ -10,7 +10,7 @@
         <version>0.4.0-SNAPSHOT</version>
     </parent>
 
-    <name>Regular Reports Service Commons</name>
+    <name>Regular Reports Commons</name>
     <groupId>com.intrasoft.csp</groupId>
     <artifactId>regrep-commons</artifactId>
     <version>0.4.0-SNAPSHOT</version>
