--- a/csp-apps/regular-reports/regrep-emailer/pom.xml
+++ b/csp-apps/regular-reports/regrep-emailer/pom.xml
@@ -10,17 +10,14 @@
         <version>0.4.0-SNAPSHOT</version>
     </parent>
 
-    <name>emailer</name>
+    <name>Regular Reports Email Sending Service</name>
     <groupId>com.intrasoft.csp</groupId>
-    <artifactId>emailer</artifactId>
+    <artifactId>regrep-emailer</artifactId>
     <version>0.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
@@ -28,7 +25,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <!--<version>1.5.2.RELEASE</version>-->
+            <!--<version>1.5.2.RELEASE</version>&ndash;&gt;-->
+            <version>2.0.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
