--- a/csp-apps/regular-reports/regrep-es-client/pom.xml
+++ b/csp-apps/regular-reports/regrep-es-client/pom.xml
@@ -10,7 +10,7 @@
         <version>0.4.0-SNAPSHOT</version>
     </parent>
 
-    <name>regrep-es-client</name>
+    <name>Regular Reports Elasticsearch Client</name>
     <groupId>com.intrasoft.csp</groupId>
     <artifactId>regrep-es-client</artifactId>
     <version>0.4.0-SNAPSHOT</version>
