--- a/deployment/docker/applications/openam/CSP-Cert.properties
+++ b/deployment/docker/applications/openam/CSP-Cert.properties
@@ -1,5 +1,6 @@
 
 iplanet-am-auth-cert2-user-profile-mapper=subject CN
+iplanet-am-auth-cert2-orga-profile-mapper=subject O
 openam-am-auth-cert2-update-crl=true
 iplanet-am-auth-cert2-attr-check-crl=CN
 iplanet-am-auth-cert2-organisation-name=___CSP_DOMAIN___
