property for organisation certificate field

--- a/csp-apps/oam/openam-auth-cert2/src/main/resources/amAuthCert2.properties
+++ b/csp-apps/oam/openam-auth-cert2/src/main/resources/amAuthCert2.properties
@@ -134,6 +134,10 @@ a501=Name of this organisation
 a501.help=This is the name of organisation the login certificate must belong to.
 a501.help.txt=The Certificate2 module checks if the organisation name obtained from presented user certificate does match \
 this value (e.g. DN=(CN=user1, O=tku.csp.com, L=Berlin, ST=Berlin, C=DE) and organisation name is tku.csp.com than the outcome is true). 
+a5011=Certificate Field used to access organisation name
+a5011.help=The Certificate2 module needs to read the name of organization from the user certificate, stored in this field.  
+a5011.help.txt=The read name of the organisation is compared while login with the value stored in this module. Only users belonging \
+to corresponding organisation will be authenticated.
 amAuthCert-eeh-debug-desc=Turn on debugging.
 amAuthCert-ff-aliases-desc=Certificate User Aliases
 amAuthCert-debug.on=On
@@ -153,7 +157,8 @@ noOtherAttr=No value provided for other field to access user profile.
 noURLCertAuth=URL certificate authentication not enabled.
 
 noOrgName=Organisation name to be checked missing.
-orgaInvalid=Presented certificate do not belong to specified organisation.
+orgNameInvalid=Presented certificate do not belong to specified organisation.
+orgProfileMapperUnkown=Got unknown certificate field name for organisation.
 
 choiceNone=none
 choiceSimple=simple
@@ -166,6 +171,8 @@ choiceSubjectDN=subject DN
 choiceSubjectCN=subject CN
 choiceSubjectUID=subject UID
 choiceSubject0=subject O
+choiceSubjectO=subject O
+choiceSubjectOU=subject OU
 choiceEmail=email address
 choiceOther=other
 choiceRFC822Name=RFC822Name
