SXCSP-260: Adding flexible fragment tables plus enum beautifying for use with Reports

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -5,6 +5,10 @@ regrep.basis.monthly=true
 regrep.basis.quarterly=false
 regrep.basis.yearly=true
 
+# Regular Reports Email object sender/recipient address
+regrep.from=<regrep@csp-athens.gr>
+regrep.to=<admin@csp-athens.gr>
+
 # Cron Expressions
 regrep.cron.daily=0 0 9 ? * MON-FRI
 regrep.cron.weekly=0 0 9 ? * MON
@@ -14,12 +18,12 @@ regrep.cron.yearly=0 0 9 1 JAN ?
 
 # elasticsearch instance settings
 es.protocol=http
-es.host=docker.containers
+es.host=<docker.containers>
 es.port=9200
 
 # spring.mail settings
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
+spring.mail.host=<smtp.gmail.com>
 spring.mail.username=<username>
 spring.mail.password=<password>
 spring.mail.port=587
