--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -37,6 +37,7 @@ external.use.ssl = true
 external.ssl.endpoint.protocol = https4-ex
 external.ssl.keystore.resource = /path/to/keystore
 external.ssl.keystore.passphrase = <secret>
+external.ssl.port = 8443
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
