SXCSP-260: Compensating for time differences between queries and reports, plus a fix for daily cron

--- a/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
+++ b/csp-apps/regular-reports/regrep-app/src/main/resources/application.properties
@@ -10,7 +10,7 @@ regrep.from=<regrep@csp-athens.gr>
 regrep.to=<admin@csp-athens.gr>
 
 # Cron Expressions
-regrep.cron.daily=0 0 9 ? * MON-FRI
+regrep.cron.daily=0 0 9 ? * *
 regrep.cron.weekly=0 0 9 ? * MON
 regrep.cron.monthly=0 0 9 1 * ?
 regrep.cron.quarterly=0 0 9 1 1/3 ?
